--- a/Ommig.html
+++ b/Ommig.html
@@ -27,15 +27,21 @@
     </nav>
 
     <!------ Sidens indhold -------->
+    <div section id="om">
 
-    <img src="images/selvportr%C3%A6t.jpg" alt="selvportræt">
+        <h1>Om mig / CV</h1>
 
+        <img src="images/selvportr%C3%A6t.jpg" alt="selvportræt">
+
+        <p>Mit navn er Shawna Schmidt Mercano og jeg er 25 år gammel. Jeg bor i Brønshøj med min kæreste og vores to børn. Til hverdag studerer jeg Multimediedesign på KEA - Københavns Erhvervsakademi.
+        </p>
+
+    </div>
 
     <!-- footer -->
     <hr>
     <footer>
-        <p>1. semester eksamenes Portfolio af Shawna S. Mercano</p>
-        <p>Juni 2018</p>
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
     </footer>
 
 
