--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,11 +33,9 @@
 
     <!-- footer -->
     <hr>
-    <footer>
-        <p>1. semester eksamenes Portfolio af Shawna S. Mercano</p>
-        <p>Juni 2018</p>
+   <footer>
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
     </footer>
-
 
     <!-- footer slut -->
 
