--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 <body>
 
     <!------ menu -------->
+
+    <div class="Shawna">
+        <a href="index.html">Shawna Mercano</a>
+    </div>
+
     <nav>
         <ul>
-            <a href="index.html">Shawna Mercano</a>
             <a href="index.html">Forside</a>
             <a href="Ommig.html">Om mig</a>
             <a href="Portfolio.html">Portfolio</a>
@@ -27,15 +31,23 @@
     </nav>
 
     <!------ Sidens indhold -------->
+    <div class="Forside">
 
+        <h1>
+            Forside
+        </h1>
+
+        <p>
+            Forsidens indhold
+        </p>
+
+    </div>
 
 
 
     <!-- footer -->
-    <hr>
     <footer>
-        <p>1. semester eksamenes Portfolio af Shawna S. Mercano</p>
-        <p>Juni 2018</p>
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
     </footer>
 
 
