--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,12 +28,185 @@
 
     <!------ Sidens indhold -------->
 
+    <section id="portfolio">
 
+
+
+        <!--------- Række 1 ------------>
+
+        <div class="row1">
+            <div class="content">
+                <div class="boks">
+
+
+                    <p>Stilartsite <br>Dette var min første opgave som multimediedesigner på KEA, hvor vi skulle udarbejde et website om en specifik stilart - min stilart var Bauhaus.</p>
+
+                </div>
+            </div>
+
+
+            <div class="content">
+
+                <a href="http://shawnamercano.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/index.html" target="_blank">
+<img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="350" height="350">
+</a>
+
+
+
+
+            </div>
+        </div>
+
+
+        <!--------- Række 2 ------------>
+
+        <div class="row2">
+
+            <div class="content">
+
+                <a href="everydayproject.html">
+<img border="0" alt="everyday project logo" src="images/everyday.png" width="350" height="350">
+</a>
+            </div>
+
+
+            <div class="content">
+                <div class="boks">
+
+                    <p>Everyday project</p>
+
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+        <!--------- Række 3 ------------>
+
+        <div class="row3">
+            <div class="content">
+                <div class="boks">
+
+
+                    <p>Redesign</p>
+
+                </div>
+            </div>
+
+
+            <div class="content">
+
+                <a href="Redesign.html">
+<img border="0" alt="redesign billede" src="images/Kong%20Gulerod.png" width="350" height="350">
+</a>
+
+            </div>
+        </div>
+
+
+        <!--------- Række 4 ------------>
+
+        <div class="row4">
+
+            <div class="content">
+
+                <a href="http://www.shawnamercano.dk/kea/02-animation/projekt/index.html" target="_blank">
+<img border="0" alt="animation billede" src="images/animation.png" width="350" height="350">
+</a>
+            </div>
+
+
+            <div class="content">
+                <div class="boks">
+
+                    <p>Animation</p>
+
+                </div>
+            </div>
+
+        </div>
+
+
+        <!--------- Række 5 ------------>
+
+        <div class="row5">
+            <div class="content">
+                <div class="boks">
+
+
+                    <p>Sex &amp; Samfund animation</p>
+
+                </div>
+            </div>
+
+
+            <div class="content">
+
+                <a href="http://shawnamercano.dk/kea/02-animation/02_05_01_Gruppe-4_dokumentationssite/index.html" target="_blank">
+<img border="0" alt="Sex og samfund billede" src="images/isabellas%20dilemma.png" width="350" height="350">
+</a>
+
+            </div>
+        </div>
+
+
+
+        <!--------- Række 6 ------------>
+
+        <div class="row6">
+
+            <div class="content">
+
+                <a href="Keaapp.html">
+<img border="0" alt="KEA app billede" src="images/keaapp.png" width="350" height="350">
+</a>
+            </div>
+
+
+            <div class="content">
+                <div class="boks">
+
+                    <p>KEA app</p>
+
+                </div>
+            </div>
+
+        </div>
+
+        <!--------- Række 7 ------------>
+
+        <div class="row7">
+            <div class="content">
+                <div class="boks">
+
+
+                    <p>Joe Loyalty app</p>
+
+                </div>
+            </div>
+
+
+            <div class="content">
+
+                <a href="Joeapp.html">
+<img border="0" alt="Joe Loyalty billede" src="images/Joe%20app.png" width="350" height="350">
+</a>
+
+            </div>
+        </div>
+
+
+
+
+
+    </section>
 
 
     <!-- footer -->
-    <hr>
-   <footer>
+
+    <footer>
         1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
     </footer>
 
