--- a/Redesign.html
+++ b/Redesign.html
@@ -31,11 +31,11 @@
     <div class="Forside">
 
         <h1>
-            Forside
+            Redesign
         </h1>
 
         <p>
-            Forsidens indhold
+            sidens indhold
         </p>
 
     </div>
