--- a/everydayproject.html
+++ b/everydayproject.html
@@ -31,11 +31,11 @@
     <div class="Forside">
 
         <h1>
-            Forside
+            Everyday project
         </h1>
 
         <p>
-            Forsidens indhold
+            Sidens indhold
         </p>
 
     </div>
