--- a/Joeapp.html
+++ b/Joeapp.html
@@ -31,11 +31,11 @@
     <div class="Forside">
 
         <h1>
-            Forside
+            Joe Loyalty app
         </h1>
 
         <p>
-            Forsidens indhold
+            Sidens indhold
         </p>
 
     </div>
