--- a/Redesign.html
+++ b/Redesign.html
@@ -21,9 +21,11 @@
     <nav>
         <ul>
             <a href="index.html">Shawna Mercano</a>
-            <a href="index.html">Forside</a>
-            <a href="Ommig.html">Om mig</a>
-            <a href="Portfolio.html">Portfolio</a>
+            <div class="menu">
+                <a href="index.html">Forside</a>
+                <a href="Portfolio.html">Portfolio</a>
+                <a href="Ommig.html">Om mig</a>
+            </div>
         </ul>
     </nav>
 
@@ -35,8 +37,13 @@
         </h1>
 
         <p>
-            sidens indhold
+            <a href="http://shawnamercano.dk/kea/03-content/03-redesign/docs/dokumentationssite.html" target="_blank">Dokumentationssite</a>
+            <br>
+
+            <a href="http://shawnamercano.dk/kea/03-content/03-redesign/site/index.html" target="_blank">Færdigt Redesign</a>
+
         </p>
+
 
     </div>
 
