--- a/Ommig.html
+++ b/Ommig.html
@@ -17,19 +17,23 @@
 <body>
 
     <!------ menu -------->
-    <nav>
+     <nav>
         <ul>
             <a href="index.html">Shawna Mercano</a>
-            <a href="index.html">Forside</a>
-            <a href="Ommig.html">Om mig</a>
-            <a href="Portfolio.html">Portfolio</a>
+            <div class="menu">
+                <a href="index.html">Forside</a>
+                <a href="Portfolio.html">Portfolio</a>
+                <a href="Ommig.html">Om mig</a>
+            </div>
         </ul>
     </nav>
 
     <!------ Sidens indhold -------->
+
+    <h1>Om mig / CV</h1>
     <div section id="om">
 
-        <h1>Om mig / CV</h1>
+
 
         <img src="images/selvportr%C3%A6t.jpg" alt="selvportræt">
 
@@ -39,7 +43,6 @@
     </div>
 
     <!-- footer -->
-    <hr>
     <footer>
         1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
     </footer>
