--- a/Portfolio.html
+++ b/Portfolio.html
@@ -20,30 +20,33 @@
     <nav>
         <ul>
             <a href="index.html">Shawna Mercano</a>
-            <a href="index.html">Forside</a>
-            <a href="Ommig.html">Om mig</a>
-            <a href="Portfolio.html">Portfolio</a>
+            <div class="menu">
+                <a href="index.html">Forside</a>
+                <a href="Portfolio.html">Portfolio</a>
+                <a href="Ommig.html">Om mig</a>
+            </div>
         </ul>
     </nav>
-
     <!------ Sidens indhold -------->
+
+   <h1>PORTFOLIO</h1>
 
     <section id="portfolio">
 
-
-
         <!--------- Række 1 ------------>
 
-        <div class="row1">
+        <div class="row">
             <div class="content">
                 <div class="boks">
 
+                    <div class="tekst">
+                        <h1>Stilartsite</h1>
+                        <hr>
+                        <p>Dette var min første opgave som multimediedesigner på KEA, hvor vi skulle udarbejde et website om en specifik stilart - min stilart var Bauhaus.</p>
 
-                    <p>Stilartsite <br>Dette var min første opgave som multimediedesigner på KEA, hvor vi skulle udarbejde et website om en specifik stilart - min stilart var Bauhaus.</p>
-
+                    </div>
                 </div>
             </div>
-
 
             <div class="content">
 
@@ -60,7 +63,7 @@
 
         <!--------- Række 2 ------------>
 
-        <div class="row2">
+        <div class="row">
 
             <div class="content">
 
@@ -72,12 +75,12 @@
 
             <div class="content">
                 <div class="boks">
+                    <div class="tekst">
+                        <h1>Everyday project</h1>
 
-                    <p>Everyday project</p>
-
+                    </div>
                 </div>
             </div>
-
 
 
         </div>
@@ -85,16 +88,16 @@
 
         <!--------- Række 3 ------------>
 
-        <div class="row3">
+        <div class="row">
             <div class="content">
                 <div class="boks">
 
+                    <div class="tekst">
+                        <h1>Redesign</h1>
 
-                    <p>Redesign</p>
-
+                    </div>
                 </div>
             </div>
-
 
             <div class="content">
 
@@ -108,7 +111,7 @@
 
         <!--------- Række 4 ------------>
 
-        <div class="row4">
+        <div class="row">
 
             <div class="content">
 
@@ -120,9 +123,9 @@
 
             <div class="content">
                 <div class="boks">
-
-                    <p>Animation</p>
-
+                    <div class="tekst">
+                        <h1>Animation</h1>
+                    </div>
                 </div>
             </div>
 
@@ -131,16 +134,16 @@
 
         <!--------- Række 5 ------------>
 
-        <div class="row5">
+        <div class="row">
             <div class="content">
                 <div class="boks">
 
+                    <div class="tekst">
+                        <h1>Sex &amp; Samfund animation</h1>
 
-                    <p>Sex &amp; Samfund animation</p>
-
+                    </div>
                 </div>
             </div>
-
 
             <div class="content">
 
@@ -155,7 +158,7 @@
 
         <!--------- Række 6 ------------>
 
-        <div class="row6">
+        <div class="row">
 
             <div class="content">
 
@@ -167,9 +170,16 @@
 
             <div class="content">
                 <div class="boks">
+                    <div class="tekst">
+                        <div class="tekst">
+                            <h1>KEA app</h1>
+                            <hr>
 
-                    <p>KEA app</p>
-
+                            <p>
+                                Udvikling af en app til studerende på KEA. App'en myKEA har de vigtigste informationer samlet på ét sted - samtidig understøtter appen et større socialt og fagligt samspil mellem den danske og internationale multimediedesign studerende.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -177,12 +187,12 @@
 
         <!--------- Række 7 ------------>
 
-        <div class="row7">
+        <div class="row">
             <div class="content">
                 <div class="boks">
 
 
-                    <p>Joe Loyalty app</p>
+                    <h1>Joe Loyalty app</h1>
 
                 </div>
             </div>
