--- a/everydayproject.html
+++ b/everydayproject.html
@@ -21,9 +21,11 @@
     <nav>
         <ul>
             <a href="index.html">Shawna Mercano</a>
-            <a href="index.html">Forside</a>
-            <a href="Ommig.html">Om mig</a>
-            <a href="Portfolio.html">Portfolio</a>
+            <div class="menu">
+                <a href="index.html">Forside</a>
+                <a href="Portfolio.html">Portfolio</a>
+                <a href="Ommig.html">Om mig</a>
+            </div>
         </ul>
     </nav>
 
@@ -37,6 +39,9 @@
         <p>
             Sidens indhold
         </p>
+
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/3sH0J_qMW5M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     </div>
 
