--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <nav>
         <ul>
             <a href="index.html">Shawna Mercano</a>
-            <a href="index.html">Forside</a>
-            <a href="Ommig.html">Om mig</a>
-            <a href="Portfolio.html">Portfolio</a>
+            <div class="menu">
+                <a href="index.html">Forside</a>
+                <a href="Portfolio.html">Portfolio</a>
+                <a href="Ommig.html">Om mig</a>
+            </div>
         </ul>
     </nav>
 
