--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,7 +19,7 @@
     <!------ menu -------->
     <nav>
         <ul>
-            <a href="index.html">Shawna Mercano</a>
+
             <div class="menu">
                 <a href="index.html">Forside</a>
                 <a href="Portfolio.html">Portfolio</a>
@@ -29,7 +29,7 @@
     </nav>
     <!------ Sidens indhold -------->
 
-   <h1>PORTFOLIO</h1>
+    <h1>PORTFOLIO</h1>
 
     <section id="portfolio">
 
@@ -41,24 +41,27 @@
 
                     <div class="tekst">
                         <h1>Stilartsite</h1>
+                        <br>
                         <hr>
+                        <br>
                         <p>Dette var min første opgave som multimediedesigner på KEA, hvor vi skulle udarbejde et website om en specifik stilart - min stilart var Bauhaus.</p>
 
                     </div>
                 </div>
             </div>
 
+
             <div class="content">
+                <div class="pic">
 
-                <a href="http://shawnamercano.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/index.html" target="_blank">
-<img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="350" height="350">
+                    <a href="http://shawnamercano.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/index.html" target="_blank">
+<img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="400" height="400">
 </a>
-
-
-
+                </div>
 
             </div>
         </div>
+
 
 
         <!--------- Række 2 ------------>
@@ -66,10 +69,11 @@
         <div class="row">
 
             <div class="content">
-
-                <a href="everydayproject.html">
-<img border="0" alt="everyday project logo" src="images/everyday.png" width="350" height="350">
+                <div class="pic">
+                    <a href="everydayproject.html">
+<img border="0" alt="everyday project logo" src="images/everyday.png" width="400" height="400">
 </a>
+                </div>
             </div>
 
 
@@ -77,6 +81,9 @@
                 <div class="boks">
                     <div class="tekst">
                         <h1>Everyday project</h1>
+                        <br>
+                        <hr>
+                        <br>
 
                     </div>
                 </div>
@@ -94,17 +101,22 @@
 
                     <div class="tekst">
                         <h1>Redesign</h1>
+                        <br>
+                        <hr>
+                        <br>
+                        <p> Redesign af en allerede eksisterende hjemmeside. <br> Min gruppe redesignede website for Børnehuset Kong Gulerod - En privat dagpleje i København NV. (Username: kea Password: kea)
+                        </p>
 
                     </div>
                 </div>
             </div>
 
             <div class="content">
-
-                <a href="Redesign.html">
-<img border="0" alt="redesign billede" src="images/Kong%20Gulerod.png" width="350" height="350">
+                <div class="pic">
+                    <a href="Redesign.html">
+<img border="0" alt="redesign billede" src="images/Kong%20Gulerod.png" width="400" height="400">
 </a>
-
+                </div>
             </div>
         </div>
 
@@ -114,10 +126,11 @@
         <div class="row">
 
             <div class="content">
-
-                <a href="http://www.shawnamercano.dk/kea/02-animation/projekt/index.html" target="_blank">
-<img border="0" alt="animation billede" src="images/animation.png" width="350" height="350">
+                <div class="pic">
+                    <a href="http://www.shawnamercano.dk/kea/02-animation/projekt/index.html" target="_blank">
+<img border="0" alt="animation billede" src="images/animation.png" width="400" height="400">
 </a>
+                </div>
             </div>
 
 
@@ -125,6 +138,13 @@
                 <div class="boks">
                     <div class="tekst">
                         <h1>Animation</h1>
+                        <br>
+                        <hr>
+                        <br>
+                        <p>
+                            Et animationsspil om en gammel mand, der skal tage stilling til, om han vil redde en baby, der triller væk fra sin uopmærksomme mor.
+                        </p>
+
                     </div>
                 </div>
             </div>
@@ -140,17 +160,23 @@
 
                     <div class="tekst">
                         <h1>Sex &amp; Samfund animation</h1>
+                        <br>
+                        <hr>
+                        <br>
+                        <p>
+                            Et animationsspil udarbejdet for Sex &amp; Samfund og Privat Snak. Målgruppen var 13-16 årige med og fokus på billeddeling.
+                        </p>
 
                     </div>
                 </div>
             </div>
 
             <div class="content">
-
-                <a href="http://shawnamercano.dk/kea/02-animation/02_05_01_Gruppe-4_dokumentationssite/index.html" target="_blank">
-<img border="0" alt="Sex og samfund billede" src="images/isabellas%20dilemma.png" width="350" height="350">
+                <div class="pic">
+                    <a href="http://shawnamercano.dk/kea/02-animation/02_05_01_Gruppe-4_dokumentationssite/index.html" target="_blank">
+<img border="0" alt="Sex og samfund billede" src="images/sexogsamfund.png" width="400" height="400">
 </a>
-
+                </div>
             </div>
         </div>
 
@@ -161,19 +187,21 @@
         <div class="row">
 
             <div class="content">
-
-                <a href="Keaapp.html">
-<img border="0" alt="KEA app billede" src="images/keaapp.png" width="350" height="350">
+                <div class="pic">
+                    <a href="Keaapp.html">
+<img border="0" alt="KEA app billede" src="images/keaapp2.png" width="400" height="400">
 </a>
+                </div>
             </div>
-
 
             <div class="content">
                 <div class="boks">
                     <div class="tekst">
                         <div class="tekst">
                             <h1>KEA app</h1>
+                            <br>
                             <hr>
+                            <br>
 
                             <p>
                                 Udvikling af en app til studerende på KEA. App'en myKEA har de vigtigste informationer samlet på ét sted - samtidig understøtter appen et større socialt og fagligt samspil mellem den danske og internationale multimediedesign studerende.
@@ -193,17 +221,23 @@
 
 
                     <h1>Joe Loyalty app</h1>
+                    <br>
+                    <hr>
+                    <br>
+                    <p>
+
+                    </p>
 
                 </div>
             </div>
 
 
             <div class="content">
-
-                <a href="Joeapp.html">
-<img border="0" alt="Joe Loyalty billede" src="images/Joe%20app.png" width="350" height="350">
+                <div class="pic">
+                    <a href="Joeapp.html">
+<img border="0" alt="Joe Loyalty billede" src="images/Joe%20app.png" width="400" height="400">
 </a>
-
+                </div>
             </div>
         </div>
 
