--- a/everydayproject.html
+++ b/everydayproject.html
@@ -20,7 +20,6 @@
 
     <nav>
         <ul>
-            <a href="index.html">Shawna Mercano</a>
             <div class="menu">
                 <a href="index.html">Forside</a>
                 <a href="Portfolio.html">Portfolio</a>
@@ -30,12 +29,12 @@
     </nav>
 
     <!------ Sidens indhold -------->
-    <div class="Forside">
+
 
         <h1>
             Everyday project
         </h1>
-
+<section id="everyday">
         <p>
             Sidens indhold
         </p>
@@ -43,9 +42,10 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/3sH0J_qMW5M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-    </div>
 
 
+
+    </section>
 
     <!-- footer -->
     <footer>
