--- a/Joeapp.html
+++ b/Joeapp.html
@@ -12,6 +12,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+
+    <!-- link til facebook og insta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
@@ -37,8 +42,13 @@
         </h1>
 
         <p>
-            Sidens indhold
+            <a href="http://shawnamercano.dk/kea/04-ux/04_03_02_gruppe-3_dokumentationssite/index.html" target="_blank">Dokumentationssite</a>
+            <br>
+
+            <a href="https://docs.google.com/presentation/d/1k0DyImYpdFEzbI2yvcfsyGQIc372ViE74_we_NN5hyU/edit#slide=id.p" target="_blank">Link til præsentation</a>
+
         </p>
+
 
     </div>
 
@@ -46,8 +56,16 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
+
     </footer>
+
 
 
     <!-- footer slut -->
