--- a/Keaapp.html
+++ b/Keaapp.html
@@ -12,13 +12,18 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+
+    <!-- link til facebook og insta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
 
     <!------ menu -------->
 
-      <nav>
+    <nav>
         <ul>
 
             <div class="menu">
@@ -37,7 +42,11 @@
         </h1>
 
         <p>
-            Sidens indhold
+            <a href="http://shawnamercano.dk/kea/04-ux/01-bruger/index.html" target="_blank">Dokumentationssite</a>
+            <br>
+
+            <a href="" target="_blank">Link til præsentation</a>
+
         </p>
 
     </div>
@@ -45,9 +54,17 @@
 
 
     <!-- footer -->
-    <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
+     <footer>
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
+
     </footer>
+
 
 
     <!-- footer slut -->
