--- a/Ommig.html
+++ b/Ommig.html
@@ -12,12 +12,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+
+    <!-- link til facebook og insta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
 
     <!------ menu -------->
-     <nav>
+    <nav>
         <ul>
 
             <div class="menu">
@@ -31,21 +36,50 @@
     <!------ Sidens indhold -------->
 
     <h1>Om mig / CV</h1>
+
     <div section id="om">
 
 
 
         <img src="images/selvportr%C3%A6t.jpg" alt="selvportræt">
 
-        <p>Mit navn er Shawna Schmidt Mercano og jeg er 25 år gammel. Jeg bor i Brønshøj med min kæreste og vores to børn. Til hverdag studerer jeg Multimediedesign på KEA - Københavns Erhvervsakademi.
+
+        <p>Mit navn er Shawna, jeg er 25 år gammel og mor til to. Jeg er født i New York, men er vokset op i Københavns NordVestkvarter. Nu bor jeg i Brønshøj, med min kæreste og to børn. <br> Til hverdag studerer jeg Multimediedesign på KEA - Københavns Erhvervsakademi.
         </p>
+
+
+        <h2>Kontakt info</h2>
+        <hr>
+        <br>
+
+
+        <a href="tel:23811040">Tlf: 23811040</a>
+        <br>
+        <a href="mailto:shawna.schmidt.mercano@gmail.com">shawna.schmidt.mercano@gmail.com</a>
+        <br>
+
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
 
     </div>
 
+
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
+
     </footer>
+
 
 
     <!-- footer slut -->
