--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,6 +12,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+
+    <!-- link til facebook og insta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
@@ -54,7 +59,7 @@
             <div class="content">
                 <div class="pic">
 
-                    <a href="http://shawnamercano.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/index.html" target="_blank">
+                    <a href="Stilartsite.html">
 <img border="0" alt="bauhaus icon" src="images/bauhaus.png" width="400" height="400">
 </a>
                 </div>
@@ -84,6 +89,9 @@
                         <br>
                         <hr>
                         <br>
+                        <p>
+                            En kort videoe lavet for CPH:DOX, til Everydays videoplatform. Projektet tog afsæt i videoer om virkeligheden, med fokus på almindelige menneskers ualmindelige historier..
+                        </p>
 
                     </div>
                 </div>
@@ -127,7 +135,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="http://www.shawnamercano.dk/kea/02-animation/projekt/index.html" target="_blank">
+                    <a href="animation.html">
 <img border="0" alt="animation billede" src="images/animation.png" width="400" height="400">
 </a>
                 </div>
@@ -173,7 +181,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <a href="http://shawnamercano.dk/kea/02-animation/02_05_01_Gruppe-4_dokumentationssite/index.html" target="_blank">
+                    <a href="sexogsamfund.html">
 <img border="0" alt="Sex og samfund billede" src="images/sexogsamfund.png" width="400" height="400">
 </a>
                 </div>
@@ -219,15 +227,15 @@
             <div class="content">
                 <div class="boks">
 
-
+<div class="tekst">
                     <h1>Joe Loyalty app</h1>
                     <br>
                     <hr>
-                    <br>
+
                     <p>
-
+                        Forbedring af den allerede eksisterende app - Joe Loyalty. Fokus lå i at forbedre kundeoplevelsen og øge brugervenligheden.
                     </p>
-
+                    </div>
                 </div>
             </div>
 
@@ -251,8 +259,16 @@
     <!-- footer -->
 
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
+
     </footer>
+
 
     <!-- footer slut -->
 
