--- a/Redesign.html
+++ b/Redesign.html
@@ -12,6 +12,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+
+    <!-- link til facebook og insta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
@@ -30,11 +35,17 @@
     </nav>
 
     <!------ Sidens indhold -------->
-    <div class="Forside">
 
-        <h1>
-            Redesign
-        </h1>
+
+    <h1>
+        Redesign
+    </h1>
+    <div id="redesign">
+
+        <h3>Tema 3 - Grundlæggende Video </h3>
+        <p>
+            I dette projekt blev gruppen stillet opgaven at redesigne en eksisterende virksomheds hjemmeside. Med fokus på at tydeliggøre virksomhedens koncept og interesser, samt at overskueliggøre hjemmesiden ved at forbedre brugervenligheden, udviklede vi en hjemmeside som passede til Børnehuset Kong Gulerod.
+        </p>
 
         <p>
             <a href="http://shawnamercano.dk/kea/03-content/03-redesign/docs/dokumentationssite.html" target="_blank">Dokumentationssite</a>
@@ -51,8 +62,16 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
+
     </footer>
+
 
 
     <!-- footer slut -->
