--- a/animation.html
+++ b/animation.html
@@ -37,11 +37,11 @@
     <div class="Forside">
 
         <h1>
-            Forside
+            Animation
         </h1>
 
         <p>
-            Forsidens indhold
+            <a href="http://www.shawnamercano.dk/kea/02-animation/projekt/index.html" target="_blank">Animation</a>
         </p>
 
     </div>
@@ -59,6 +59,7 @@
 
 
     </footer>
+
 
 
     <!-- footer slut -->
