--- a/everydayproject.html
+++ b/everydayproject.html
@@ -12,6 +12,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+
+    <!-- link til facebook og insta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
@@ -31,14 +36,30 @@
     <!------ Sidens indhold -------->
 
 
-        <h1>
-            Everyday project
-        </h1>
-<section id="everyday">
+    <h1>
+        Everyday project
+    </h1>
+    <section id="everyday">
+
+        <h3>Tema 3 - Grundlæggende Video
+        </h3>
         <p>
-            Sidens indhold
+            I forbindelse med Copenhagen International Documentary Film Festival CPH:DOX, fik vi til opgave at lave en kort video til deres videoplatform, Everyday Project. <br> Opgave formuleringen var at vi skulle finde en eller flere personer som havde en spændende historie at fortælle og som forholdt sig til ét de to temaer: mennesket &amp; demokrati.
+        </p>
+        <br>
+        <p>
+            Vi blev delt op i grupper og første punkt på dagsordenen var at finde en person vi kunne interwieve.
+            <br> Da vi havde fundet en person til vores video interviw, kunne vå gå i gang med at planlægge videoens og interviewets opbygning. <br> I løbet af ugen fik vi stiftet bekendskab med og udviklet kompetencer indenfor interviewteknik, samt optagelse, klipning og redigering af film.
         </p>
 
+
+        <br>
+        <p> Resultatet blev denne video, der tager udgangspunkt i 24 årige Simon, der i løbet af det sidste år har tabt sig 80 kg.
+        </p>
+        <br>
+        <p>
+
+        </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/3sH0J_qMW5M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
@@ -49,8 +70,16 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+
+
+        <a href="https://www.facebook.com/shawna.mercano" target="_blank"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+        <a href="https://www.instagram.com/shawnamercano/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+
+
     </footer>
+
 
 
     <!-- footer slut -->
