--- a/sexogsamfund.html
+++ b/sexogsamfund.html
@@ -37,11 +37,15 @@
     <div class="Forside">
 
         <h1>
-            Forside
+            Sex &amp; Samfund animation
         </h1>
 
         <p>
-            Forsidens indhold
+            <a href="http://shawnamercano.dk/kea/02-animation/02_05_01_Gruppe-4_dokumentationssite/index.html" target="_blank">Dokumentationssite</a>
+
+            <br>
+
+            <a href="http://shawnamercano.dk/kea/02-animation/animation_projekt_final/index.html" target="_blank">Animation</a>
         </p>
 
     </div>
@@ -59,6 +63,7 @@
 
 
     </footer>
+
 
 
     <!-- footer slut -->
